--- a/static/global.css
+++ b/static/global.css
@@ -50,3 +50,63 @@ a:hover {
 a:visited {
   color: rgb(0, 80, 160);
 }
+
+main {
+  padding: 1em;
+  margin: 0 auto;
+  font-size: 16px;
+}
+
+hr {
+  width: 180px;
+  margin: 32px auto;
+  height: 1px;
+  background: #1d1d1dd6;
+}
+
+section {
+  max-width: 800px;
+  margin: 0 auto;
+  line-height: 1.8em;
+  color: #1d1d1dd6;
+}
+
+section > p {
+  text-align: justify;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-size: 4em;
+  font-weight: 100;
+  color: black;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+h1 > span {
+  margin-top: 8px;
+  font-size: 16px;
+  display: block;
+}
+
+h2 {
+  font-weight: 500;
+  max-width: 90%;
+  line-height: 1.4em;
+  margin: 0 auto;
+  margin-bottom: 16px;
+}
+
+footer {
+  margin: 48px auto;
+  text-align: center;
+  color: #515151;
+  font-size: 14px;
+}
+
+@media (min-width: 640px) {
+  main {
+    max-width: none;
+  }
+}
