--- a/static/global.css
+++ b/static/global.css
@@ -84,6 +84,11 @@ h1 {
   text-align: center;
 }
 
+h1 > a, h1 > a:hover, h1 > a:visited {
+  color: black;
+  text-decoration: none;
+}
+
 h1 > span {
   margin-top: 8px;
   font-size: 16px;
@@ -96,6 +101,7 @@ h2 {
   line-height: 1.4em;
   margin: 0 auto;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 footer {
