--- a/static/global.css
+++ b/static/global.css
@@ -26,6 +26,7 @@ body {
   margin: 0 auto;
   padding: 8px;
   box-sizing: border-box;
+  max-width: 920px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
@@ -113,9 +114,13 @@ footer {
   font-size: 14px;
 }
 
-@media (min-width: 640px) {
+@media (max-width: 640px) {
+  body {
+    padding: 0;
+  }
   main {
     max-width: none;
+    padding: 0;
   }
 }
 
@@ -167,7 +172,7 @@ code[class*="language-"] ::selection {
 
 /* Code blocks. */
 pre[class*="language-"] {
-  padding: 2em;
+  padding: 1em 2em;
   margin: 0.5em 0;
   overflow: auto;
 }
